Versão com categorias.
As somas estão funcionando.

Ps: podem ser feitas otimizações no cédigo.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     </string-array>
 
     <string-array name="array_categorias">
-        <item>Selecione uma categorias</item>
+        <item>Selecione uma categoria</item>
         <item>Cartão de crédito</item>
         <item>Cartão de débito</item>
         <item>Combustível</item>
